--- a/index.html
+++ b/index.html
@@ -64,16 +64,9 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
-									</ul>
+									<h3>这个是第一篇文章目的是测试博客的排版的效果</h3>
+									<p>从这个文章开始，我便开始维护这个网页，当作一个在线的可分享文档的存储....</p>
+									<a href="../document/first.html"><p>阅读全文</p></a>
 								</div>
 							</section>
 
