update the first code html
这个是第一个代码的文本

--- a/document/first.html
+++ b/document/first.html
@@ -1,101 +1,91 @@
 <!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>oldbranch的个人博客</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/code.css" />
 	</head>
 	<body class="is-preload">
-
 		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="../images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">oldbranch</a></h1>
-					<!-- <p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p> -->
-				</header>
-				<!-- <nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
-					</ul>
-				</nav> -->
-				<!-- <footer>
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer> -->
-			</section>
-
+		<section id="header">
+			<header>
+				<span class="image avatar"><img src="../images/avatar.jpg" alt="" /></span>
+				<h1 id="logo"><a href="#">oldbranch</a></h1>
+				<!-- <p>I got reprogrammed by a rogue AI<br />
+				and now I'm totally cray</p> -->
+			</header>
+			<!-- <nav id="nav">
+				<ul>
+					<li><a href="#one" class="active">About</a></li>
+					<li><a href="#two">Things I Can Do</a></li>
+					<li><a href="#three">A Few Accomplishments</a></li>
+					<li><a href="#four">Contact</a></li>
+				</ul>
+			</nav> -->
+			<footer>
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-weibo"><span class="label">weibo</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+			</footer>
+		</section>
 		<!-- Wrapper -->
-			<div id="wrapper">
-				<!-- Main -->
-					<div id="main">
-						<!-- One -->
-							<section id="one">
-								<!-- <div class="image main" data-position="center">
-									<img src="../images/banner.jpg" alt="" />
-								</div> -->
-								<div class="container">
-									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
-									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante 
-                                        lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. 
-                                        Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum 
-                                        blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h2>这个测试文档目的是测试每篇文章的排版的效果</h3>
-									<p>
-                                       这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中
-                                       能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目
-                                       的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么
-                                       样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测
-                                       试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态
-                                       实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现
-                                    </p>
-								</div>
-							</section>
+		<div id="wrapper">
+			<!-- Main -->
+			<div id="main">
+				<!-- One -->
+				<section id="one">
+					<!-- <div class="image main" data-position="center">
+						<img src="../images/banner.jpg" alt="" />
+					</div> -->
+					<div class="container">
+						<header class="major">
+							<h2>Read Only</h2>
+							<p>Just an incredibly simple responsive site<br />
+							template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						</header>
+						<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante 
+                            lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. 
+                            Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum 
+                            blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 					</div>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
+				</section>
+				<!-- Two -->
+				<section id="two">
+					<div class="container">
+						<h2>这个测试文档目的是测试每篇文章的排版的效果</h3>
+						<p>
+						这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中
+						能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目
+						的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么
+						样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测
+						试文章在网页之中能够以什么样子的姿态实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态
+						实现这个文档的目的是为了测试文章在网页之中能够以什么样子的姿态实现
+						</p>
+					</div>
+				</section>
 			</div>
-
+			<!-- Footer -->
+			<section id="footer">
+				<div class="container">
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</section>
+		</div>
 		<!-- Scripts -->
-			<script src="../assets/js/jquery.min.js"></script>
-			<script src="../assets/js/jquery.scrollex.min.js"></script>
-			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/browser.min.js"></script>
-			<script src="../assets/js/breakpoints.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<script src="../assets/js/main.js"></script>
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/jquery.scrollex.min.js"></script>
+		<script src="../assets/js/jquery.scrolly.min.js"></script>
+		<script src="../assets/js/browser.min.js"></script>
+		<script src="../assets/js/breakpoints.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/main.js"></script>
 	</body>
 </html>
